--- a/views/query.html
+++ b/views/query.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -16,17 +15,48 @@
         <div class="nav-wrapper">
           
           <a href="#" class="brand-logo" style="padding-left: 10px;"><i class="small material-icons">directions_car </i>DriveWithUs</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="contactUs.html">Contact Us</a></li>
-            <li><a href="rating.html" style="padding-right: 20px;">Our Reviews</a></li>
-            <li><a href="query.html" style="padding-right: 20px;">For queries</a></li>
-          </ul>
         </div>
       </nav>
-      <div 
-      style="display: flex; flex-direction: column;">
-        <img src="car.jpg" alt="Car" height="450px" style="padding: 0px 5px 0px 5px">
-      </div>
+      <div class="nav-wrapper" style="padding:18px 0px 0px 18px">
+        <a href="home"><i class="small material-icons">home </i>Back to Home </a>
+</div >
+          
+    <div style="padding: 5% 15% 5% 15%;">
+        <h5>Please fill in your information</h5>
+        <form>
+        <div class="row">
+            <div class="input-field col s6">
+                <input id="firstName" type="text" class="validate">
+                <label for="firstName">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="lastName" type="text" class="validate">
+                <label for="lastName">Last Name</label>
+              </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <input id="emailId" type="email" class="validate">
+                <label for="emailId">Email id</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="phoneNumber" type="text" class="validate">
+                <label for="phoneNumber">Phone Number</label>
+              </div>
+        </div>
+        <div class="row">
+            <div class="input-field">
+                <input id="query" type="text" class="validate">
+                <label for="query">Please mention your query</label>
+            </div>
+        </div>
+        <div class="row">
+    <div class="input-field col s12 center-align">
+        <a class="waves-effect waves-light btn" id="formSubmit" href="QuerySuccessPage">Submit</a>
+    </div>
+    </div>
+</form>
+    </div>
       <footer class="page-footer">
         <div class="container">
           <div class="row">
@@ -36,6 +66,7 @@
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Reach Us</h5>
+          
               <ul>
                 <li><a class="grey-text text-lighten-3" href="#!">6/48 XYZ Unit, Clayton VIC - 3169</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">+61 0423678985</a></li>
