--- a/views/rating.html
+++ b/views/rating.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -18,36 +17,26 @@
         </div>
       </nav>
       <div class="nav-wrapper" style="padding:18px 0px 0px 18px">
-        <a href="index.html"><i class="small material-icons">home </i>Back to Home </a>
-</div>
-        <div style="display: flex;">
-            <div style="padding: 35px 0px 50px 51px;">
-            <div class="col l6 s12">
-                    <h5> <i class="small material-icons">add_location </i> Clayton</h5>
-                <p>XYZ, Clayton,VIC-3169</p>
-                <p>+61 000000000</p>
-              </div>
-              <div class="col l6 s12">
-                <h5> <i class="small material-icons">add_location </i>Burwood</h5>
-                <p>XYZ, Burwood, VIC-3190</p>
-                <p>+61 000000000</p>
-              </div>
-              <div class="col l6 s12">
-                <h5><i class="small material-icons">add_location </i>Richmond</h5>
-                <p>XYZ, Richmond, VIC-3190</p>
-                <p>+61 000000000</p>
-              </div>
-              <div class="col l6 s12">
-                <h5><i class="small material-icons">add_location </i>Westall</h5>
-                <p>XYZ, Westall, VIC-3190</p>
-                <p>+61 000000000</p>
-              </div>
-            </div>
-            <div style="padding: 0px 5px 0px 200px" width="200px" height="450px">
-                <img src="car2.png" alt="Car" height="450px" style="padding: 0px 5px 0px 5px">
-            </div>
+        <a href="home"><i class="small material-icons">home </i>Back to Home </a>
+</div >
+       <div style="padding: 10px 30px 0px 34px">
+        <div>
+            <p>Linda <i class="Tiny material-icons">star </i><i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i></p>
+            <p>My instructor was incredibly patient and knowledgeable. He made me feel comfortable behind the wheel from day one. The personalized lessons helped me pass my driving test on the first try!</p>
         </div>
-    
+        <div>
+            <p>Alex <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i></p>
+            <p>The defensive driving course was fantastic. I learned techniques that I never would have thought of, and I feel much better prepared for any situation that might come up while I'm driving.</p>
+        </div>
+        <div>
+            <p>Lisa <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i></p>
+            <p>As a senior citizen, I was worried about getting back on the road after many years. The refresher course was exactly what I needed. The instructor was patient and gave me the confidence to drive again.</p>
+        </div>
+        <div>
+            <p>Chris <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i> <i class="Tiny material-icons">star </i></p>
+          <p>I took the teen driver education program, and it was excellent. The combination of classroom learning and practical driving experience was perfect. I felt well-prepared for my driving test.</p>
+        </div>
+       </div>
 
       <footer class="page-footer">
         <div class="container">
