--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -13,50 +13,41 @@
   <body>
     <nav>
         <div class="nav-wrapper">
-          
-          <a href="#" class="brand-logo" style="padding-left: 10px;"><i class="small material-icons">directions_car </i>DriveWithUs</a>
+          <a href="#" class="brand-logo" style="padding-left: 10px;"><i class="small material-icons">directions_car </i> DriveWithUs</a>
         </div>
       </nav>
       <div class="nav-wrapper" style="padding:18px 0px 0px 18px">
-        <a href="index.html"><i class="small material-icons">home </i>Back to Home </a>
-</div >
-          
-    <div style="padding: 5% 15% 5% 15%;">
-        <h5>Please fill in your information</h5>
-        <form>
-        <div class="row">
-            <div class="input-field col s6">
-                <input id="firstName" type="text" class="validate">
-                <label for="firstName">First Name</label>
+        <a href="home"><i class="small material-icons">home </i>Back to Home </a>
+</div>
+        <div style="display: flex;">
+            <div style="padding: 35px 0px 50px 51px;">
+            <div class="col l6 s12">
+                    <h5> <i class="small material-icons">add_location </i> Clayton</h5>
+                <p>XYZ, Clayton,VIC-3169</p>
+                <p>+61 000000000</p>
               </div>
-              <div class="input-field col s6">
-                <input id="lastName" type="text" class="validate">
-                <label for="lastName">Last Name</label>
+              <div class="col l6 s12">
+                <h5> <i class="small material-icons">add_location </i>Burwood</h5>
+                <p>XYZ, Burwood, VIC-3190</p>
+                <p>+61 000000000</p>
               </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s6">
-                <input id="emailId" type="email" class="validate">
-                <label for="emailId">Email id</label>
+              <div class="col l6 s12">
+                <h5><i class="small material-icons">add_location </i>Richmond</h5>
+                <p>XYZ, Richmond, VIC-3190</p>
+                <p>+61 000000000</p>
               </div>
-              <div class="input-field col s6">
-                <input id="phoneNumber" type="text" class="validate">
-                <label for="phoneNumber">Phone Number</label>
+              <div class="col l6 s12">
+                <h5><i class="small material-icons">add_location </i>Westall</h5>
+                <p>XYZ, Westall, VIC-3190</p>
+                <p>+61 000000000</p>
               </div>
-        </div>
-        <div class="row">
-            <div class="input-field">
-                <input id="query" type="text" class="validate">
-                <label for="query">Please mention your query</label>
+            </div>
+            <div style="padding: 0px 5px 0px 200px" width="200px" height="450px">
+                <img src="car2.png" alt="Car" height="450px" style="padding: 0px 5px 0px 5px">
             </div>
         </div>
-        <div class="row">
-    <div class="input-field col s12 center-align">
-        <a class="waves-effect waves-light btn" id="formSubmit" href="QuerySuccessPage.html">Submit</a>
-    </div>
-    </div>
-</form>
-    </div>
+    
+
       <footer class="page-footer">
         <div class="container">
           <div class="row">
