--- a/views/index.html
+++ b/views/index.html
@@ -15,24 +15,17 @@
         <div class="nav-wrapper">
           
           <a href="#" class="brand-logo" style="padding-left: 10px;"><i class="small material-icons">directions_car </i>DriveWithUs</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="contactUs">Contact Us</a></li>
+            <li><a href="rating" style="padding-right: 20px;">Our Reviews</a></li>
+            <li><a href="query" style="padding-right: 20px;">For queries</a></li>
+          </ul>
         </div>
       </nav>
-      <div class="nav-wrapper" style="padding:18px 0px 0px 18px">
-        <a href="index.html"><i class="small material-icons">home </i>Back to Home </a>
-</div >
-          
-    <div style="padding: 5% 15% 5% 15%;">
-        <h5>Your query is submitted successfully.</h5>
-        <p>We will get back to you soon.</p>
-        <p>Query Details</p>
-        <p id="firstName"> </p>
-        <p id="lastName"></p>
-        <p id="email"></p>
-        <p id="phone"></p>
-        <p id="query"></p>
-    
-    </div>
-
+      <div 
+      style="display: flex; flex-direction: column;">
+        <img src="car.jpg" alt="Car" height="450px" style="padding: 0px 5px 0px 5px">
+      </div>
       <footer class="page-footer">
         <div class="container">
           <div class="row">
@@ -42,7 +35,6 @@
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Reach Us</h5>
-          
               <ul>
                 <li><a class="grey-text text-lighten-3" href="#!">6/48 XYZ Unit, Clayton VIC - 3169</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">+61 0423678985</a></li>
