Commit chnages for unit testing

--- a/views/query.html
+++ b/views/query.html
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
@@ -40,7 +40,7 @@
                 <label for="emailId">Email id</label>
               </div>
               <div class="input-field col s6">
-                <input id="phoneNumber" type="text" class="validate">
+                <input id="phoneNumber" type="number" class="validate">
                 <label for="phoneNumber">Phone Number</label>
               </div>
         </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
     <div class="input-field col s12 center-align">
-        <a class="waves-effect waves-light btn" id="formSubmit" href="QuerySuccessPage">Submit</a>
+        <a class="waves-effect waves-light btn" id="formSubmit" href="QuerySuccessPage.html">Submit</a>
     </div>
     </div>
 </form>
