--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="script.js"></script>
- <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="/socket.io/socket.io.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   
   <body>
